--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Flask-SQLAlchemy>=3.0.3
 gunicorn>=21.2.0
 requests>=2.31.0
 python-dotenv>=1.0.1
-google-generativeai>=0.4.0
 flask-cors>=4.0.0
+# Removed google-generativeai since you are switching to Groq API
